<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mark8.view.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_mapsActivity"
            app:destination="@id/navigation_location" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.mark8.view.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_orders_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.mark8.view.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_notifications_to_mapsActivity"
            app:destination="@id/navigation_location" />
    </fragment>
    <fragment
        android:id="@+id/navigation_location"
        android:name="com.mark8.view.ui.map.mapFragment"
        android:label="@string/title_location"
        tools:layout="@layout/map_fragment" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home" />

    </fragment>


<!--    <activity-->
<!--        android:id="@+id/mapsActivity"-->
<!--        android:name="com.mark8.view.ui.map.MapsActivity"-->
<!--        android:label="activity_maps"-->
<!--        tools:layout="@layout/activity_maps" />-->


</navigation>