<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen200dp"
        card_view:cardCornerRadius="@dimen/dimen10dp"
        card_view:cardElevation="@dimen/dimen1dp"
        card_view:cardUseCompatPadding="true"
        card_view:elevation="@dimen/dimen1dp">

        <LinearLayout
            android:id="@+id/productItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="@dimen/dimen150dp"
                android:layout_height="@dimen/dimen150dp"
                android:layout_gravity="left"
                android:layout_margin="@dimen/dimen10dp"
                android:contentDescription="@string/product_image"
                android:src="@drawable/samsung_galaxy_a70" />

            <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen28dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/samsung_galaxy_a70"
                android:textColor="@color/title"
                android:textSize="@dimen/dimen18sp" />

            <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginTop="@dimen/dimen28dp"
                android:text="@string/_5399_egp"
                android:textColor="@color/blueDark"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen100dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:layout_marginBottom="@dimen/dimen5dp"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgShare"
                android:layout_width="@dimen/dimen30dp"
                android:layout_height="@dimen/dimen30dp"
                android:layout_marginEnd="@dimen/dimen20dp"
                android:background="@drawable/touch_feedback"
                android:contentDescription="@string/share_product"
                android:src="@drawable/ic_baseline_add_24" />

            <TextView
                android:id="@+id/imgCart"
                android:layout_width="@dimen/dimen30dp"
                android:layout_height="@dimen/dimen30dp"
                android:layout_marginEnd="@dimen/dimen20dp"
                android:contentDescription="@string/add_to_cart"
                android:text="1"
                android:textSize="@dimen/dimen20sp"
                android:src="@drawable/ic_add_shopping_cart" />

            <ImageView
                android:id="@+id/imgFavourite"
                android:layout_width="@dimen/dimen30dp"
                android:layout_height="@dimen/dimen30dp"
                android:contentDescription="@string/add_to_favourite"
                android:layout_gravity="top"
                android:foregroundGravity="center"
                android:src="@drawable/ic_baseline_minimize_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
