<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.SearchActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingTop="@dimen/dimen20dp"
            android:elevation="10dp">

            <EditText
                android:id="@+id/editQuery"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_arrow_back"
                android:drawableEnd="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:gravity="start|center"
                android:hint="@string/what_are_you_looking_for"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                android:textColor="#979797"
                android:textSize="@dimen/dimen16sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen10dp"
                android:layout_weight="1"
                android:text="@string/recent_searches"
                android:textSize="@dimen/dimen16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clearAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen10dp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:onClick="clearAll"
                android:text="@string/clear_all"
                android:textSize="@dimen/dimen16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ListView
            android:id="@+id/wordList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawSelectorOnTop="true"
            android:orientation="vertical"
            tools:listitem="@layout/word_list_item" />
    </LinearLayout>
</layout>